--- a/src/PostBoy.Api/appsettings.json
+++ b/src/PostBoy.Api/appsettings.json
@@ -5,5 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Serilog": {
+    "Seq": {
+      "ServerUrl": "http://localhost:5341",
+      "ApiKey": ""
+    },
+    "Application": "PostBoy.Api"
+  },
+  "ConnectionStrings": {
+    "PostBoyConnectionString": "server=localhost;Database=postboy;user=root;password=123456;pooling=true;CharSet=utf8;port=3306;sslmode=Required;"
+  },
+  "AllowableCorsOrigins": "http://localhost:3000"
 }
