Send message integrate wechat

--- a/src/PostBoy.Messages/PostBoy.Messages.csproj
+++ b/src/PostBoy.Messages/PostBoy.Messages.csproj
@@ -16,6 +16,12 @@
 
     <ItemGroup>
       <PackageReference Include="Mediator.Net" Version="4.7.0" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Events" />
+      <Folder Include="Requests" />
     </ItemGroup>
     
 </Project>
