implement of login function
implement of login function

--- a/src/PostBoy.Api/appsettings.json
+++ b/src/PostBoy.Api/appsettings.json
@@ -16,5 +16,10 @@
   "ConnectionStrings": {
     "PostBoyConnectionString": "server=localhost;Database=postboy;user=root;password=123456;pooling=true;CharSet=utf8;port=3306;sslmode=Required;"
   },
+  "Authentication": {
+    "Jwt": {
+      "SymmetricKey": "yamimeal_proton"
+    }
+  },
   "AllowableCorsOrigins": "http://localhost:3000"
 }
