--- a/src/PostBoy.Api/PostBoy.Api.csproj
+++ b/src/PostBoy.Api/PostBoy.Api.csproj
@@ -16,6 +16,7 @@
     </PropertyGroup>
     
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.11" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.11" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
