--- a/src/PostBoy.Core/PostBoy.Core.csproj
+++ b/src/PostBoy.Core/PostBoy.Core.csproj
@@ -21,6 +21,7 @@
       <PackageReference Include="dbup" Version="5.0.8" />
       <PackageReference Include="dbup-mysql" Version="5.0.10" />
       <PackageReference Include="EFCore.BulkExtensions" Version="6.5.6" />
+      <PackageReference Include="Hangfire" Version="1.7.32" />
       <PackageReference Include="Mediator.Net" Version="4.7.0" />
       <PackageReference Include="Mediator.Net.Autofac" Version="4.7.0" />
       <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.9" />
@@ -40,7 +41,6 @@
       <Folder Include="Dbup\Scripts_2022" />
       <Folder Include="Handlers\EventHandlers" />
       <Folder Include="Handlers\RequestHandlers" />
-      <Folder Include="Services" />
     </ItemGroup>
 
     <ItemGroup>
