--- a/src/PostBoy.Api/appsettings.json
+++ b/src/PostBoy.Api/appsettings.json
@@ -18,7 +18,7 @@
   },
   "Authentication": {
     "Jwt": {
-      "SymmetricKey": "yamimeal_proton"
+      "SymmetricKey": "postboy_authentication_proton"
     }
   },
   "AllowableCorsOrigins": "http://localhost:3000"
