--- a/src/PostBoy.Core/PostBoy.Core.csproj
+++ b/src/PostBoy.Core/PostBoy.Core.csproj
@@ -23,8 +23,10 @@
       <PackageReference Include="EFCore.BulkExtensions" Version="6.5.6" />
       <PackageReference Include="FluentValidation" Version="11.4.0" />
       <PackageReference Include="Hangfire" Version="1.7.32" />
+      <PackageReference Include="Hangfire.Pro.Redis" Version="2.8.19" />
       <PackageReference Include="Mediator.Net" Version="4.7.0" />
       <PackageReference Include="Mediator.Net.Autofac" Version="4.7.0" />
+      <PackageReference Include="Mediator.Net.Middlewares.Serilog" Version="4.7.0" />
       <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.9" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.11" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
@@ -41,6 +43,7 @@
 
     <ItemGroup>
       <Folder Include="Handlers\RequestHandlers" />
+      <Folder Include="Jobs\RecurringJobs" />
     </ItemGroup>
 
     <ItemGroup>
