use ip address in connection string

--- a/src/PostBoy.Api/appsettings.json
+++ b/src/PostBoy.Api/appsettings.json
@@ -14,7 +14,7 @@
     "Application": "PostBoy.Api"
   },
   "ConnectionStrings": {
-    "PostBoyConnectionString": "server=localhost;Database=postboy;user=root;password=123456;pooling=true;CharSet=utf8;port=3306;sslmode=Required;"
+    "PostBoyConnectionString": "server=127.0.0.1;Database=postboy;user=root;password=123456;pooling=true;CharSet=utf8;port=3306;sslmode=Required;"
   },
   "RedisCacheConnectionString": "127.0.0.1:6379,password=,ssl=False,abortConnect=False,syncTimeout=50000,allowAdmin=true",
   "Authentication": {
